# componet_lib

./: .gitignore  CMakeLists.txt  my_componet_libConfig.cmake.in  readme.md
componet1/: componet1Config.cmake.in
componet1/my_componet_lib/componet1/: componet1.cpp  componet1.h
componet2/: CMakeLists.txt
componet2/my_componet_lib/componet2/: componet2.cpp  componet2.h
use_my_componet_lib/: CMakeLists.txt  main.cpp
